[package]
name = "linode-api-client"
version = "4.193.0"
authors = ["jperez@linode.com"]
description = "Add a Cloud Computing instance so you can build, release, and scale applications faster with virtual machines. "
license = "Apache 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "std",
  "macros",
] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = [
  "json",
  "multipart",
] }
